cmake_minimum_required(VERSION 3.21)
project(Fourth_Chapter)

set(CMAKE_CXX_STANDARD 23)

add_executable(Fourth_Chapter 4.0.cpp)
add_executable(Fourth_Chapter_1 4.1.cpp)
add_executable(Fourth_Chapter_2 4.2.cpp)
add_executable(Fourth_Chapter_3 4.3.cpp)
add_executable(Fourth_Chapter_4 Drill.cpp)
add_executable(Fourth_Chapter_5 Ex.2.cpp)
add_executable(Fourth_Chapter_6 Ex3.cpp)
add_executable(Fourth_Chapter_7 Ex4.cpp)
add_executable(Fourth_Chapter_8 Ex10.cpp)
add_executable(Fourth_Chapter_9 Ex11.cpp)
add_executable(Fourth_Chapter_10 Ex12.cpp)
add_executable(Fourth_Chapter_11 Ex13.cpp)
add_executable(Fourth_Chapter_12 Ex14.cpp)