cmake_minimum_required(VERSION 3.21)
project(untitled)

set(CMAKE_CXX_STANDARD 23)

add_executable(Second_Chapter 3.1.cpp)
add_executable(Second_Chapter_1 3.3.cpp)
add_executable(Second_Chapter_2 3.5.cpp)
add_executable(Second_Chapter_3 3.6.cpp)
add_executable(Second_Chapter_4 3.7.cpp)
add_executable(Second_Chapter_5 3.8.cpp)
add_executable(Second_Chapter_6 3.9.cpp)
add_executable(Second_Chapter_7 3.10.cpp)
add_executable(Second_Chapter_8 3.11.cpp)
add_executable(Third_Chapter_0 4.0.cpp)




